; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_branch_nested.c_svn_branch__get_subbranch_at_eid.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_branch_nested.c_svn_branch__get_subbranch_at_eid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32 }
%struct.TYPE_11__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i64 }

@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_branch__get_subbranch_at_eid(%struct.TYPE_12__* %0, %struct.TYPE_12__** %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.TYPE_12__*, align 8
  %6 = alloca %struct.TYPE_12__**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_11__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %5, align 8
  store %struct.TYPE_12__** %1, %struct.TYPE_12__*** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %12 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32*, i32** %8, align 8
  %15 = call i32 @svn_branch__state_get_element(%struct.TYPE_12__* %12, %struct.TYPE_11__** %9, i32 %13, i32* %14)
  %16 = call i32 @SVN_ERR(i32 %15)
  %17 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %18 = icmp ne %struct.TYPE_11__* %17, null
  br i1 %18, label %19, label %41

19:                                               ; preds = %4
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %21 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %20, i32 0, i32 0
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %41

26:                                               ; preds = %19
  %27 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = call i8* @svn_branch__get_id(%struct.TYPE_12__* %27, i32* %28)
  store i8* %29, i8** %10, align 8
  %30 = load i8*, i8** %10, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load i32*, i32** %8, align 8
  %33 = call i8* @svn_branch__id_nest(i8* %30, i32 %31, i32* %32)
  store i8* %33, i8** %11, align 8
  %34 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %35 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i8*, i8** %11, align 8
  %38 = load i32*, i32** %8, align 8
  %39 = call %struct.TYPE_12__* @svn_branch__txn_get_branch_by_id(i32 %36, i8* %37, i32* %38)
  %40 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %6, align 8
  store %struct.TYPE_12__* %39, %struct.TYPE_12__** %40, align 8
  br label %43

41:                                               ; preds = %19, %4
  %42 = load %struct.TYPE_12__**, %struct.TYPE_12__*** %6, align 8
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %42, align 8
  br label %43

43:                                               ; preds = %41, %26
  %44 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %44
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_branch__state_get_element(%struct.TYPE_12__*, %struct.TYPE_11__**, i32, i32*) #1

declare dso_local i8* @svn_branch__get_id(%struct.TYPE_12__*, i32*) #1

declare dso_local i8* @svn_branch__id_nest(i8*, i32, i32*) #1

declare dso_local %struct.TYPE_12__* @svn_branch__txn_get_branch_by_id(i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
